fix: blank reset button in jukebox settings (#60)

--- a/user.css
+++ b/user.css
@@ -1036,6 +1036,14 @@ THIRD PARTY EXTENSIONS/APPS
 }
 
 /*The Eternal Jukebox*/
+.app-module__flex-center___p5IEY_eternalDjukebox button {
+    color: black;
+}
+
+.app-module__flex-center___p5IEY_eternalDjukebox {
+    padding-bottom: 12px;
+}
+
 .app-module__stats___LylvR_eternalDjukebox {
     padding-bottom: 110px;
 }
