--- a/user.css
+++ b/user.css
@@ -375,16 +375,16 @@ MAIN VIEW
     transform: rotate(45deg) translate(0px, -70%);
     filter: blur(6px);
 }
-.main-view-container .main-playButton-PlayButton > button > span {
+.main-home-home .main-playButton-PlayButton > button > span {
   inline-size: 42px;
   block-size: 42px;
   min-block-size: auto;
 }
-.main-view-container .main-playButton-PlayButton svg {
+.main-home-home .main-playButton-PlayButton svg {
   width: 24px;
   height: 24px;
 }
-.main-view-container .main-playButton-PlayButton > button > span > span {
+.main-home-home .main-playButton-PlayButton > button > span > span {
   position: initial;
   height: 24px;
 }
@@ -499,6 +499,14 @@ PLAYLIST PAGE
 .Root__top-bar .main-playButton-PlayButton> button:hover > span,
 .Root__top-bar .main-playButton-PlayButton > button:focus > span {
     background: none !important;
+}
+.main-actionBar-ActionBar .main-playButton-PlayButton svg {
+  width: 32px;
+  height: 32px;
+}
+.main-actionBar-ActionBar .main-playButton-PlayButton > button > span > span {
+  position: initial;
+  height: 32px;
 }
 .main-entityHeader-titleButton {
     width: auto;
