fix: window controls interferring with buddy feed and now playing view

--- a/user.css
+++ b/user.css
@@ -940,8 +940,9 @@ RIGHT SIDEBAR
 }
 
 /* add top padding */
-.spotify__os--is-windows .main-buddyFeed-content {
-    padding-top: 24px;
+.spotify__os--is-windows .main-buddyFeed-content,
+.spotify__os--is-windows .main-nowPlayingView-content {
+    padding-top: 36px;
 }
 
 /* set transparent background for section containers */
